portfolio/css/style.css
/* ... */
#fw-hover:hover {
    background-image: url("../images/FW_hover.png");
}
/********************
ANIMATION
********************/
#animations-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    margin: 20px;
}
#catanimations {
    display: flex;
}
#catanimations img{
    width: 25vw;
}
#nekos {
    width: 100vw;
    padding: 0px;
}
#doodles {
    display: flex;
}
#doodles img {
    width: 25vw;
}
/********************
MESSAGE FORM
********************/
input[type=text], select, textarea {
    width: 100%; 
    padding: 12px; 
    border: 1px solid #388df9;
    color: #388df9;
    border-radius: 4px; 
    box-sizing: border-box; 
    margin-top: 6px; 
    margin-bottom: 16px; 
    resize: vertical 
}
label {
    font-weight: bolder;
}
input[type=submit] {
    background-color: #388df9;
    color: #ffdd6e;
    padding: 12px 20px;
    border: none;
    border-radius: 4px;
    cursor: pointer;
    transition: 
        background-color .5s,
        color .5s
    ;
}
input[type=submit]:hover {
    background-color: #ffdd6e;
    color: #388df9;
}
.msg-container {
    border-radius: 5px;
    background-color: #f56a59;
    padding: 20px;
    margin: 40px 455px;
    justify-content: center;
    align-items: center;
    text-align: center;
}
/********************
PHOTOGRAPHY
********************/
#photos {
    justify-content: center;
    align-items: center;
    text-align: center;
}
#photos h3 {
    text-align: center;
    font-size: 5vw;
}
#photos .horizontal-masonry-gallery {
    display: flex;
    flex-wrap: wrap;
    gap: 24px;
    padding: 35px;
    margin: 25px;
    border: 10px solid #f56a59;
}
#photos .horizontal-masonry-gallery img {
    width: 20vw;
    flex: 1;
    object-fit: cover;
}
#bearheadg {
    justify-content: center;
    align-items: center;
    text-align: center;
    padding-top: 50px;
}
#bearheadg img{
    width: 60vw;
}
/********************
GRAPHICS
********************/
#graphics {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 40px;
}
#graphics a {
    transition: 
        transform .5s
    ;
}
#graphics a:hover {
    transform: translateY(-5px);
}
#graphics img {
    width: 20vw;
}
#commissions .commissionsimg {
    width: 24.4vw;
}

/********************
ILLUSTRATIONS
********************/
#images2 {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}
#image-hover {
    background-image: url("../images/WN2.png");
    background-size: 33vw;
    justify-content: center;
    object-fit: fill;
    background-repeat: no-repeat;
    object-position: center;
    width: 536px;
    height: 525px;
    transition:
        background-image .5s
    ;
}
#image-hover:hover {
    background-image: url("../images/WN.png");
}
#af {
    justify-content: center;
    align-items: center;
}
#af #catboy{
    width: 40vw;
    justify-content: center;
}
#af #catgirl{
    width: 40vw;
    justify-content: center;
}
#af #creature{
    width: 40vw;
    justify-content: center;
}
#aria #ariafiori {
    width: 40vw;
    justify-content: center;
}
/********************
CLASSWORK - GRAPHICS
********************/
#images {
    display: flex;
    flex-direction: column;
}
#classtitle h1 {
    justify-content: center;
    align-items: center;
    text-align: center;
}
#classtitle {
    justify-content: center;
    align-items: center;
    text-align: center;
}
#images .horizontal-masonry-gallery {
    justify-content: center;
    align-items: center;
    text-align: center;
}
.classworkimg {
    width: 30vw;
}
.logosimg {
    width: 30vw;
}
.commissionsimg {
    width: 30vw;
}
.photograph {
    width: 40vw;
}
/********************
WEBSITE - GRAPHICS
********************/
#webgraphics-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
    align-items: center;
}
#webimgs {
    justify-content: center;
    align-items: center;
}
#webimgs img {
    width: 25vw;
}

#illustrations img{
    width: 21vw;
    padding-top: 10px;
}
/********************
BLOG
********************/
.leftcolumn {
    float: left;
    width: 75%;
    align-items: center;
    justify-content: center;
}
.rightcolumn {
    float: left;
    width: 25%;
    padding-left: 20px;
}
  
.blogimg {
    width: 100%;
    padding: 0px;
}

.card {
    background-color: white;
    padding: 20px;
    margin-top: 20px;
    background-image: url("../images/boxshadow.png");
    background-size: 85vw;
    background-position: bottom;
    object-fit: fill;
}
.socialcard {
    border: 3px solid #f56a59;
    border-radius: 10px;
    background-color: white;
    padding: 20px;
    margin-top: 20px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
}
.row:after {
    content: "";
    display: table;
    clear: both;
}
#socials {
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    font-size: 3vw;
}
#socials a {
    padding: 0px 10px;
    color: #388df9;
    transform: none;
    transition: 
        color .3s,
        transform .3s
    ;
}
#socials a:hover {
    color: #f56a59;
    transform: translateY(-4px);
}
#cramp {
    width: 14vw;
}
#popular {
    width: 5vw;
    object-fit: cover;
}
#blog3 img {
    width: 13vw;
}
#blog4 #WIPimg {
    justify-content: center;
    align-items: center;
    text-align: center;
    width: 15vw;
}
#blog5 #selfimg {
    justify-content: center;
    align-items: center;
    text-align: center;
    width: 13vw;
}
#blog6 #singimg {
    justify-content: center;
    align-items: center;
    text-align: center;
    width: 15vw;
}
#blog6 p {
    padding: 13px;
}
/* ... */

